--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "babel-loader": "^7.1.2",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "ioredis": "^3.1.4",
     "jest": "^21.1.0",
+    "promise": "^8.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
     "semantic-ui-react": "^0.73.0",
+    "supertest": "^3.0.0",
     "webpack": "^3.5.6"
   },
   "devDependencies": {
