--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "promise": "^8.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-rangeslider": "^2.1.0",
     "react-router": "^4.2.0",
     "semantic-ui-react": "^0.73.0",
     "supertest": "^3.0.0",
@@ -21,7 +22,11 @@
     "axios-mock-adapter": "^1.9.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "enzyme": "^2.9.1",
+    "react-test-renderer": "^15.6.1",
+    "style-loader": "^0.18.2"
   },
   "scripts": {
     "start": "node server.js",
