--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.4",
     "ioredis": "^3.1.4",
     "jest": "^21.1.0",
+    "multer": "^1.3.0",
     "promise": "^8.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
